# CMakeExamples

./: README.md  default.nix
01_simple_project/: Makefile
01_simple_project/source/: CMakeLists.txt  main.c
02_basic_targets/: Makefile
02_basic_targets/source/: CMakeLists.txt  main.c  module.c  module.h
